<resources>
    <string name="app_name">Currency Converter</string>
    <string name="select_country">Select Country</string>
    <string name="search">Search...</string>
    <string name="convert_from">Convert From</string>
    <string name="convert_to">Convert To</string>
    <string name="amount_to_convert">Amount To convert</string>
    <string name="conversion_rate">Conversion Rate</string>
    <string name="convert">Convert</string>
</resources>