<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="15dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:id="@+id/master_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/convert_from" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/convert_to"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/search_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/convert_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/select_country"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:drawableRight="@drawable/baseline_keyboard_arrow_down_24"
                    />

                <TextView
                    android:id="@+id/convert_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/select_country"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:drawableRight="@drawable/baseline_keyboard_arrow_down_24"/>

            </LinearLayout>

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/amount_to_convert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/amount_to_convert"
                />

            <TextView
                android:id="@+id/conversion_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/conversion_rate"
                />

        </LinearLayout>

            <LinearLayout
                android:id="@+id/output_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/amount_to_convert_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:inputType="number"
                    />

                <TextView
                    android:id="@+id/conversion_rate_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/conversion_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/design_convert_button"
                android:text="@string/convert"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>